tests/NormalTests/paczka1/fuzzy1/23397580.err
Error in line 5: zR8 A48 74,2
Error in line 7: E2Kyuhry0o A48 61,3
Error in line 14: a2UyVJgN S499 14,8
Error in line 28: cdxNEl S499 43,1
